# gdb-mcp

./: .gitignore  README.md  gdb-mcp-launcher.sh  pyproject.toml
docs/: claude-code-setup.md  specification.md  testing.md
examples/: claude_code_config_example.json  run_server.py
resources/: gdb_commands.md
scripts/: mcp-inspector-wsl.sh  run-inspector.sh  test-mcp.sh
src/gdb_mcp/: __main__.py  cli.py  gdb_manager.py  server.py
tests/: expects.md
tests/src/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c  Makefile
